2008-10-15  Jonathan Pryor  <jpryor@novell.com>

	* fcntl.c: Use Mono_Posix_{From,To}Flock() for flock conversion.
	* Makefile.am: Include <time.h> in map.c.
	* map.c, map.h: Flush; adds Flock, Timespec support.

2008-09-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: When writing bytes and polling, take into account negative
	values to indicate infinite timeout. Patch by Leszek Ciesielski.
	Fixes #399245.

2008-07-22  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (patch-libtool): New helper target.

2008-04-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c (set_attributes): When setting parity to Even,
	besides removing the PARODD bit, add the PARENB bit to actually
	use even parity.
	Patch by Leszek Ciesielski.
	Fixes #365248.

2008-03-31  Miguel de Icaza  <miguel@novell.com>

	* serial.c (write_serial): Avoid infinite loops, see #375580.

2008-02-12  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: SLES9 has glib 2.2, so we can't rely on g_atomic_int_*().
	  Provide a fallback mechanism between using Mono's atomic.h, glib 2.4
	  functions, and horribly unsafe-but-no-alternative code.

2008-02-12  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Fix another build break; g_atomic_int_set() (part of GLib 2.10)
	  isn't present on all build machines, so use an alternate function.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Mono_Unix_UnixSignal_WaitAny() semantic change: return the index
	  into the signals array of the first signaled signal if successful,
	  otherwise return the timeout.

2008-02-07  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Make the signal handler thread-safe, so that it can safely be
	  invoked concurrently from multiple threads.

2008-02-05  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Fix the Win32 build.

2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Provide support functions for Mono.Unix.UnixSignal, which 